# rethinkdb-client-driver

./: .gitignore  .travis.yml  LICENSE  README.md  rethinkdb-client-driver.cabal  shell.nix  stack.yaml
.github/workflows/: validate.yaml
benchmark/: Benchmark.hs
script/: bootstrap  cibuild
src/Database/: RethinkDB.hs
src/Database/RethinkDB/: Messages.hs  TH.hs  Terms.hs  Types.hs
src/Database/RethinkDB/Types/: Datum.hs
test/: Test.hs
