name:                   rethinkdb-client-driver
version:                0.0.0.1
license:                MIT
license-file:           LICENSE
author:                 Tomas Carnecky
maintainer:             tomas.carnecky@gmail.com
category:               Database
build-type:             Simple
cabal-version:          >= 1.10


library
    default-language  : Haskell2010
    hs-source-dirs    : src

    build-depends     : base       >= 4.6 && < 4.7
                      , aeson
                      , binary     >= 0.7.2.1
                      , bytestring
                      , hashable
                      , network
                      , scientific
                      , text
                      , unordered-containers
                      , vector

    exposed-modules   : Database.RethinkDB
    other-modules     : Database.RethinkDB.Messages
                      , Database.RethinkDB.Terms
                      , Database.RethinkDB.Types

    ghc-options       : -Wall


test-suite spec
    default-language  : Haskell2010
    hs-source-dirs    : src, test

    main-is           : Test.hs
    type              : exitcode-stdio-1.0

    build-depends     : base       >= 4.6 && < 4.7
                      , hspec
                      , smallcheck
                      , hspec-smallcheck

                        -- Copied from the library
                      , aeson
                      , binary     >= 0.7.2.1
                      , bytestring
                      , hashable
                      , network
                      , scientific
                      , text
                      , unordered-containers
                      , vector

